--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SPOTIFY_SECRET=9354a590525d46e2a3b6f5c4a4ec7b81
 # Twitter API keys
 
 TWITTER_CONSUMER_KEY=RUO7GqibUYCUvATm33ZG3UjhL
-TWITTER_CONSUMER_SECRET=	o3QbKAfSjagq9KpuoFM3k7hcfteF4kCcYa6kxjMOnnAQmTu2EB
+TWITTER_CONSUMER_SECRET=o3QbKAfSjagq9KpuoFM3k7hcfteF4kCcYa6kxjMOnnAQmTu2EB
 TWITTER_ACCESS_TOKEN_KEY=1017222957859508224-Yz9gsypt1ZWUoAmNXFHyo8xy42OA7l
 TWITTER_ACCESS_TOKEN_SECRET=aWokwsm8vZXsb1npJjjhcNpaxM7BUYb5Pn1cqQkc3SJpa
 
